Change to a more functional style code